--- a/aboutMe.html
+++ b/aboutMe.html
@@ -54,7 +54,7 @@
       also currently spending my time printing on my Ender 3, FDM 3D printer, learning how to best realize its
       potential.</p>
   </main>
-  
+  <br>
   <form>
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
@@ -63,7 +63,10 @@
     </div>
     <button type="submit" class="btn btn-primary" id="emailSubmit">submit</button>
   </form>
-  <div id="root"></div>
+  <br>
+  <div class="d-flex justify-content-center">
+    <p class="lead">Winter 2021</p>
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
