--- a/experience.html
+++ b/experience.html
@@ -47,18 +47,20 @@
   <main>
     <h4 class="display-9">&nbsp;Experience</h4>
     <hr />
-    <p class="lead">&nbsp;University of Illinois: Urbana-Champaign</p>
+    <p class="lead">&nbsp;PriceSpider</p>
 
-    <p class="lead">&nbsp;Research Intern
+    <p class="lead">&nbsp;Support Engineer
       <ul>
-        <li>UIUC: Department of Human Development and Family Studies: Dr. Ebata</li>
-        <li>Managed and wrote articles for the project’s WordPress dedicating 6/hr week for research at office hours
-        </li>
+        <li>Respond to implementation issues in HTML + CSS and resolve them according to internal service
+          level agreements</li>
+        <li>Diagnose root cause of bugs in JavaScript and C# to minimize recurrence of ongoing issues</li>
+        <li>Investigated and resolved SQL and MongoDB data propagation issues</li>
+        <li>Participates in code reviews with team members in multiple departments</li>
       </ul>
       </li>
-      <p class="lead"> Delta Tau Delta Fraternity</p>
+      <p class="lead">&nbsp;hummingbot.io</p>
 
-      <p class="lead">&nbsp;Pledge Educator</p>
+      <p class="lead">&nbsp;IT Software Support Analyst</p>
       <ul>
         <li>Pledge educator during Spring semester at Beta Upsilon chapter composed of 180+ active brothers</li>
         <li>Facilitated the fraternity education process: traditions and background focusing on pledge participation
@@ -72,8 +74,8 @@
         <p class="lead">&nbsp;Oregon State University</p>
         <ul>
           <li>B.S. in Computer Science</li>
-          <li>Courses: Data Structures, Computer Architecture, Web Development, Discrete Mathematics</li>
-          <li>GPA: 4.0</li>
+          <li>Courses: Data Structures, Computer Architecture, Web Development, Discrete Mathematics, Databases</li>
+          <li>GPA: 3.61</li>
         </ul>
 
         <p class="lead">&nbsp;University of Illinois: Urbana-Champaign </p>
